Finish validation