@@ -1,6 +1,7 @@
 package ptithcm.onlinejudge.controller.frontend.teacher;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.repository.query.Param;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -20,6 +21,7 @@ import ptithcm.onlinejudge.services.*;
 
 import javax.servlet.http.HttpSession;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/teacher/problem")
@@ -40,27 +42,38 @@ public class TeacherProblemController {
     private ProblemManagementService problemManagementService;
 
     @GetMapping("")
-    public String showProblemListPage(Model model, HttpSession session) {
-        model.addAttribute("pageTitle", "Danh sách bài tập");
-        String teacherId = session.getAttribute("user").toString();
-        List<ProblemDTO> problems = ((List<Problem>) problemManagementService.getAllProblemsCreateByTeacher(teacherId).getData())
-                .stream().map(item -> problemMapper.entityToDTO(item)).toList();
-        model.addAttribute("problems", problems);
-        return "/teacher/problem/problem";
+    public String showProblemList(HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
+        return "redirect:/teacher/problem/page/1";
     }
 
-    @PostMapping("")
-    public String searchProblems(Model model, HttpSession session, @RequestParam("keyword") String keyword) {
+    @GetMapping("/page/{page}")
+    public String showProblemListPage(Model model, @PathVariable("page") int page, @Param("keyword") String keyword, HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/login";
         model.addAttribute("pageTitle", "Danh sách bài tập");
         String teacherId = session.getAttribute("user").toString();
-        List<ProblemDTO> problems = ((List<Problem>) problemManagementService.searchAllProblemsCreateByTeacher(teacherId, keyword).getData())
-                .stream().map(item -> problemMapper.entityToDTO(item)).toList();
+        Map<String, Object> response = (Map<String, Object>) problemManagementService.getAllProblemsCreateByTeacher(teacherId, page).getData();
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            response = (Map<String, Object>) problemManagementService.searchAllProblemsCreateByTeacher(teacherId, keyword.trim(), page).getData();
+            model.addAttribute("keyword", keyword);
+        }
+        List<ProblemDTO> problems = getProblems(response).stream().map(item -> problemMapper.entityToDTO(item)).collect(Collectors.toList());
+        int currentPage = (int) response.getOrDefault("currentPage", 0);
+        int totalPages = (int) response.getOrDefault("totalPages", 0);
+        String pageUrlPrefix = "/teacher/problem";
         model.addAttribute("problems", problems);
+        model.addAttribute("currentPage", currentPage);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("pageUrlPrefix", pageUrlPrefix);
         return "/teacher/problem/problem";
     }
 
     @GetMapping("/add")
-    public String showAddProblemForm(Model model) {
+    public String showAddProblemForm(Model model, HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         model.addAttribute("pageTitle", "Add problem");
         ProblemDTO problem = new ProblemDTO();
         model.addAttribute("problem", problem);
@@ -81,6 +94,8 @@ public class TeacherProblemController {
                              @RequestParam("testCasesOut") MultipartFile[] outputs,
                              @RequestParam("problemTypeIds") String[] typeIds,
                              HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         String teacherId = session.getAttribute("user").toString();
         ResponseObject addProblemResponse = problemManagementService.addProblem(problem, teacherId, levelId, description, inputs, outputs, typeIds);
         if (!addProblemResponse.getStatus().equals(HttpStatus.OK))
@@ -89,7 +104,9 @@ public class TeacherProblemController {
     }
 
     @GetMapping("/{problemId}/edit")
-    public String showUpdateProblemPage(@PathVariable("problemId") String problemId, Model model) {
+    public String showUpdateProblemPage(@PathVariable("problemId") String problemId, Model model, HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         model.addAttribute("pageTitle", "Chỉnh sửa bài tập");
         ResponseObject getProblemByIdResponse = problemManagementService.getProblemById(problemId);
         if (!getProblemByIdResponse.getStatus().equals(HttpStatus.OK))
@@ -120,6 +137,8 @@ public class TeacherProblemController {
                                 @RequestParam("fileDescription") MultipartFile description,
                                 @RequestParam("problemTypeIds") String[] typeIds,
                                 HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         String teacherId = session.getAttribute("user").toString();
         ResponseObject editProblemResponse = problemManagementService.editProblem(problem, teacherId, levelId, description, typeIds);
         if (!editProblemResponse.getStatus().equals(HttpStatus.OK))
@@ -128,7 +147,9 @@ public class TeacherProblemController {
     }
 
     @GetMapping("/{problemId}/lock")
-    public String lockProblem(@PathVariable("problemId") String problemId) {
+    public String lockProblem(@PathVariable("problemId") String problemId, HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         ResponseObject lockProblemResponse = problemManagementService.lockProblem(problemId);
         if (!lockProblemResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
@@ -136,10 +157,20 @@ public class TeacherProblemController {
     }
 
     @GetMapping("/{problemId}/unlock")
-    public String unlockProblem(@PathVariable("problemId") String problemId) {
+    public String unlockProblem(@PathVariable("problemId") String problemId, HttpSession session) {
+        if (isExpired(session))
+            return "redirect:/";
         ResponseObject lockProblemResponse = problemManagementService.unlockProblem(problemId);
         if (!lockProblemResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
         return "redirect:/teacher/problem";
+    }
+
+    private boolean isExpired(HttpSession session) {
+        return session.getAttribute("user") == null && session.getAttribute("role") == null;
+    }
+
+    private List<Problem> getProblems(Map<String, Object> res) {
+        return (List<Problem>) res.getOrDefault("data", null);
     }
 }
